fix: fixed colors and spacings at gallery page

--- a/src/components/AppContent/Gallery/ActionBar/index.scss
+++ b/src/components/AppContent/Gallery/ActionBar/index.scss
@@ -3,22 +3,22 @@
   align-items: center;
   justify-content: space-between;
   &-reset {
+    display: block;
     position: absolute;
     top: 50%;
-    right: -42px;
+    right: 5px;
     transform: translate(0, -14%);
     color: #ff868e;
     font-size: 20px;
     cursor: pointer;
-
     &::after {
       content: '';
-      display: none;
+      display: block;
       position: absolute;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-      background: #ff868e;
+      background-color: #fff;
       border-radius: 10px;
       width: 40px;
       height: 40px;
@@ -29,6 +29,7 @@
       color: #fff;
       &::after {
         display: block;
+        background-color: #ff868e;
       }
     }
   }
@@ -37,6 +38,7 @@
     flex-direction: column;
 
     .custom-select__control {
+      background-color: #fff;
       width: 290px;
     }
 
@@ -44,9 +46,16 @@
       width: 238px;
     }
 
+    .custom-select--short.custom-select__value-container {
+      padding: 2px 8px;
+    }
+
     .actionbar-select-wrapper--auto {
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
       position: relative;
-      margin-right: auto;
+      width: 100%;
     }
 
     .select-wrapper {
@@ -94,6 +103,7 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
+    gap: 10px;
     margin-top: 10px;
   }
 
@@ -115,9 +125,11 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+    background-color: #f8f8f7;
+    border-radius: 20px;
     width: 100%;
     margin-top: 30px;
-    padding: 0 20px;
+    padding: 10px 20px 20px;
   }
 
   &-select {
